--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Comments</title>
+    <title>Комментарии</title>
 
     <!-- Fonts -->
     <link rel="dns-prefetch" href="//fonts.gstatic.com">
@@ -18,7 +18,7 @@
         <nav class="navbar navbar-expand-md navbar-light bg-white shadow-sm">
             <div class="container">
                 <a class="navbar-brand" href="index.html">
-                    Project
+                    Проект
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -34,10 +34,10 @@
                     <ul class="navbar-nav ml-auto">
                         <!-- Authentication Links -->
                             <li class="nav-item">
-                                <a class="nav-link" href="login.html">Login</a>
+                                <a class="nav-link" href="login.html">Войти</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="register.html">Register</a>
+                                <a class="nav-link" href="register.html">Зарегестрироваться</a>
                             </li>
                     </ul>
                 </div>
@@ -49,13 +49,13 @@
                 <div class="row justify-content-center">
                     <div class="col-md-8">
                         <div class="card">
-                            <div class="card-header">Login</div>
+                            <div class="card-header">Войти</div>
 
                             <div class="card-body">
                                 <form method="POST" action="">
 
                                     <div class="form-group row">
-                                        <label for="email" class="col-md-4 col-form-label text-md-right">E-Mail Address</label>
+                                        <label for="email" class="col-md-4 col-form-label text-md-right">E-Mail адрес</label>
 
                                         <div class="col-md-6">
                                             <input id="email" type="email" class="form-control is-invalid " name="email"  autocomplete="email" autofocus >
@@ -66,7 +66,7 @@
                                     </div>
 
                                     <div class="form-group row">
-                                        <label for="password" class="col-md-4 col-form-label text-md-right">Password</label>
+                                        <label for="password" class="col-md-4 col-form-label text-md-right">Пароль</label>
 
                                         <div class="col-md-6">
                                             <input id="password" type="password" class="form-control" name="password"  autocomplete="current-password">
@@ -79,7 +79,7 @@
                                                 <input class="form-check-input" type="checkbox" name="remember" id="remember" >
 
                                                 <label class="form-check-label" for="remember">
-                                                    Remember Me
+                                                    Запомнить меня
                                                 </label>
                                             </div>
                                         </div>
@@ -88,7 +88,7 @@
                                     <div class="form-group row mb-0">
                                         <div class="col-md-8 offset-md-4">
                                             <button type="submit" class="btn btn-primary">
-                                               Login
+                                               Логин
                                             </button>
                                         </div>
                                     </div>
