--- a/profile.html
+++ b/profile.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Comments</title>
+    <title>Комментарии</title>
 
     <!-- Fonts -->
     <link rel="dns-prefetch" href="//fonts.gstatic.com">
@@ -18,7 +18,7 @@
         <nav class="navbar navbar-expand-md navbar-light bg-white shadow-sm">
             <div class="container">
                 <a class="navbar-brand" href="index.html">
-                    Project
+                    Проект
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -34,10 +34,10 @@
                     <ul class="navbar-nav ml-auto">
                         <!-- Authentication Links -->
                             <li class="nav-item">
-                                <a class="nav-link" href="login.html">Login</a>
+                                <a class="nav-link" href="login.html">Войти</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="register.html">Register</a>
+                                <a class="nav-link" href="register.html">Зарегестрироваться</a>
                             </li>
                     </ul>
                 </div>
@@ -60,9 +60,9 @@
                                 <div class="row">
                                     <div class="col-md-8">
                                         <div class="form-group">
-                                            <label for="exampleFormControlInput1">Name</label>
+                                            <label for="exampleFormControlInput1">Имя</label>
                                             <input type="text" class="form-control" name="name" id="exampleFormControlInput1" value="John">
-                                           
+
                                         </div>
 
                                         <div class="form-group">
@@ -83,7 +83,7 @@
                                     </div>
 
                                     <div class="col-md-12">
-                                        <button class="btn btn-warning">Edit profile</button>
+                                        <button class="btn btn-warning">Редактировать профиль</button>
                                     </div>
                                 </div>
                             </form>
@@ -104,21 +104,21 @@
                                 <div class="row">
                                     <div class="col-md-8">
                                         <div class="form-group">
-                                            <label for="exampleFormControlInput1">Current password</label>
+                                            <label for="exampleFormControlInput1">Текущий пароль</label>
                                             <input type="password" name="current" class="form-control" id="exampleFormControlInput1">
                                         </div>
 
                                         <div class="form-group">
-                                            <label for="exampleFormControlInput1">New password</label>
+                                            <label for="exampleFormControlInput1">Новый пароль</label>
                                             <input type="password" name="password" class="form-control" id="exampleFormControlInput1">
                                         </div>
 
                                         <div class="form-group">
-                                            <label for="exampleFormControlInput1">Password confirmation</label>
+                                            <label for="exampleFormControlInput1">Подтверждение пароля</label>
                                             <input type="password" name="password_confirmation" class="form-control" id="exampleFormControlInput1">
                                         </div>
 
-                                        <button class="btn btn-success">Submit</button>
+                                        <button class="btn btn-success">Подтвердить</button>
                                     </div>
                                 </div>
                             </form>
